--- a/coupon-hub/app.json
+++ b/coupon-hub/app.json
@@ -1,30 +1,40 @@
 {
   "expo": {
-    "name": "SmartCouponOrganizer",
-    "slug": "smartcouponorganizer",
+    "name": "coupon-hub",
+    "slug": "coupon-hub",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "scheme": "smartcouponorganizer",
-    "userInterfaceStyle": "automatic",
+    "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "bundleIdentifier": "com.yourname.smartcouponorganizer",
-      "buildNumber": "1.0.0"
+      "supportsTablet": true,
+      "bundleIdentifier": "coupon-hub",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
-      "package": "com.yourname.smartcouponorganizer",
-      "versionCode": 1
+  "versionCode": 1,
+  "adaptiveIcon": {
+    "foregroundImage": "./assets/adaptive-icon.png",
+    "backgroundColor": "#ffffff"
+  },
+  "package": "com.lakshman_mallikanti.couponhub"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "your-project-id"
+        "projectId": "cbbd07ef-22cb-40e9-aa3b-9d7b1f48d64a"
       }
-    }
+    },
+    "owner": "lakshman_mallikanti"
   }
 }
